# alfred

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml
.github/workflows/: publish.yml
docs/: Agent-Backends.md  Architecture.md  CLI-Commands.md  Configuration.md  Curator.md  Distiller.md  Home.md  Installation.md  Janitor.md  Live-Dashboard.md  Semantic-Layer.md  Surveyor.md  User-Profile.md  Vault-Schema.md  _Sidebar.md
scaffold/: CLAUDE.md  README.md  Start Here.md
scaffold/.obsidian/: app.json  workspace.json
scaffold/_bases/: account.base  asset.base  conversation-detail.base  conversation.base  input.base  learn-assumption.base  learn-constraint.base  learn-decision.base  learn-synthesis.base  org.base  person.base  process.base  project.base  related.base  run.base  view-crm.base  view-home.base  view-inbox.base  view-projects.base  view-sessions.base  view-tasks.base  view-waiting.base
scaffold/_templates/: account.md  bootstrap-project.md  decision.md  learn-constraint.md  learn-decision.md
skills/vault-curator/: SKILL.md
skills/vault-curator/references/: conversation.md  project.md  session.md
skills/vault-distiller/: SKILL.md
skills/vault-distiller/references/: input.md  learn-assumption.md  learn-contradiction.md  learn-synthesis.md  note.md  person.md  run.md
skills/vault-janitor/: SKILL.md
skills/vault-janitor/references/: asset.md  bootstrap-subproject.md  event.md  location.md  org.md  process.md  task.md
src/alfred/: __init__.py  __main__.py  cli.py  dashboard.py  orchestrator.py  quickstart.py
src/alfred/curator/: __init__.py  __main__.py  config.py  context.py  (+8 more)
(+52 files in other folders)
