[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alfred-vault"
version = "0.2.0"
description = "AI-powered background services for Obsidian vault maintenance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-frontmatter>=1.1",
    "structlog>=24.0",
    "watchdog>=4.0",
    "rich>=13.0",
]

[project.optional-dependencies]
surveyor = [
    "pymilvus[milvus_lite]>=2.4",
    "scikit-learn>=1.4",
    "leidenalg>=0.10",
    "igraph>=0.11",
    "numpy>=1.26",
    "openai>=1.30",
]
all = ["alfred-vault[surveyor]"]

[project.urls]
Homepage = "https://github.com/ssdavidai/alfred"
Repository = "https://github.com/ssdavidai/alfred"

[project.scripts]
alfred = "alfred.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alfred"]

[tool.hatch.build.targets.sdist]
include = ["src/alfred/", "README.md", "LICENSE"]
